stable-version/stable-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-stable-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.kirandns.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-stable
                port:
                  number: 80
